--- a/Game101.vcxproj
+++ b/Game101.vcxproj
@@ -21,10 +21,15 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="rasterizer.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="global.hpp" />
+    <ClInclude Include="OBJ_Loader.h" />
     <ClInclude Include="rasterizer.hpp" />
+    <ClInclude Include="Shader.hpp" />
+    <ClInclude Include="Texture.hpp" />
     <ClInclude Include="Triangle.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
